Refactored header fixed scroll on mobile

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -18,7 +18,7 @@ body.split {
     display: flex;
 
     header.header {
-        position: fixed;
+        // position: fixed;
         left: 50%;
         transform: translateX(-50%);
         z-index: 109;
@@ -184,6 +184,15 @@ body.split {
 
         #featured {
             padding-bottom: $gutter;
+
+            header.header {
+                position: relative;
+                top: auto;
+                left: auto;
+                transform: none;
+                width: 13rem;
+                float: left;
+            }
         }
 
         main {
@@ -203,18 +212,12 @@ body.split {
             }
         }
 
-        #featured .header,
-        main .header {
-            padding: 0 !important;
-            position: fixed;
-            top: 30px;
-            width: auto;
-            z-index: 99;
-        }
-
         #featured {
+            padding-top: 0;
+
             .header {
-                left: $gutter / 2;
+                padding: 0;
+                left: 0;
             }
 
             .excerpt .meta:first-child {
