--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -87,7 +87,6 @@ article .header,
 
 .header-logo {
     margin-right: auto;
-    padding-right: 75px; // forces line break to not overlap with button
 }
 
 .header-menu {
